--- a/Index.html
+++ b/Index.html
@@ -31,6 +31,10 @@
       <li class="nav-item">
         <a class="nav-link" href="#section3">Section 3</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#section3" data-toggle="modal" data-target="#exampleModal">Charges</a>
+      </li>
+      
     </ul>
     
     <form class="form-inline my-2 my-lg-0">
@@ -88,6 +92,26 @@
 </div>
 
   
+  <!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
   
 </body>
 </html>
