--- a/Index.html
+++ b/Index.html
@@ -94,7 +94,7 @@
   
   <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
+  <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
@@ -103,7 +103,35 @@
         </button>
       </div>
       <div class="modal-body">
-        ...
+        <h3>Album Paper</h3>
+        <table class="table">
+          <thead>
+            <tr>
+              <th scope="col">High Glossy</th>
+              <th scope="col">Nt Glossy</th>
+              <th scope="col">Silk Matt</th>
+              <th scope="col">Velvet Regular</th>
+              <th scope="col">Velvet</th>
+              <th scope="col">Parl Regular</th>
+              <th scope="col">Parl</th>
+              <th scope="col">Gold Matelic</th>
+              <th scope="col">Silver Matelic</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>500</td>
+              <td>550</td>
+              <td>600</td>
+              <td>700</td>
+              <td>750</td>
+              <td>800</td>
+              <td>850</td>
+              <td>700</td>
+              <td>700</td>
+            </tr>
+          </tbody>
+        </table>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
