--- a/Index.html
+++ b/Index.html
@@ -103,8 +103,8 @@
         </button>
       </div>
       <div class="modal-body">
-        <h3>Album Paper</h3>
-        <table class="table">
+        <h3 class="text-center">Album Paper</h3>
+        <table class="table table-bordered table-sm">
           <thead>
             <tr>
               <th scope="col">High Glossy</th>
@@ -132,10 +132,33 @@
             </tr>
           </tbody>
         </table>
+        
+        <h3 class="text-center">Photography & Videography</h3>
+        <table class="table table-bordered table-sm">
+          <thead>
+            <tr>
+              <th scope="col">Weddingy</th>
+              <th scope="col">Birthday</th>
+              <th scope="col">Portfolios</th>
+              <th scope="col">Mundan</th>
+              <th scope="col">Opening</th>
+              <th scope="col">Other Function</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>P V</td>
+              <td>P V</td>
+              <td>P V</td>
+              <td>P V</td>
+              <td>P V</td>
+              <td>P V</td>
+            </tr>
+          </tbody>
+        </table>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
       </div>
     </div>
   </div>
