--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
 
 <style> 
 .fixed-bg {
-  background-image: url("Untitled.png");
+  background-image: url("titled.png");
   min-height: 500px;
   background-attachment: fixed;
   background-position: center;
