--- a/Index.html
+++ b/Index.html
@@ -10,9 +10,9 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 <style> 
-.fixed-bg {
+#section2 {
   background-image: url("titled.png");
-  min-height: 500px;
+  /*min-height: 500px;*/
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -101,9 +101,7 @@
   <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
   <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
 </div>
-<div class="fixed-bg"></div>
 
-<div style="height:800px;background-color:yellow;">This div is only here to enable scrolling (height = 800 pixels).</div>
   
   <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
