--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
 
 <style> 
 #section2 {
-  background-image: url("titled.png");
+  background-image: url("pexels-rovenimagescom-949586.jpg");
   /*min-height: 500px;*/
   background-attachment: fixed;
   background-position: center;
@@ -29,7 +29,7 @@
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
+    <!--<ul class="navbar-nav mr-auto">
       <li class="nav-item">
         <a class="nav-link" href="#carouselExampleControls">Home</a>
       </li>
@@ -43,14 +43,29 @@
         <a class="nav-link" href="#section3">Section 3</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#section3" data-toggle="modal" data-target="#exampleModal">Charges</a>
+        <a class="nav-link" href="#" data-toggle="modal" data-target="#exampleModal">Charges</a>
       </li>
       
-    </ul>
+    </ul>-->
     
     <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="#carouselExampleControls">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#section1">Section 1</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#section2">Section 2</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#section3">Section 3</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" data-toggle="modal" data-target="#exampleModal">Charges</a>
+        </li>
+      </ul>
     </form>
   </div>
 </nav>
@@ -58,17 +73,17 @@
 <div class="container-fluid px-0">
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner bg-info" role="listbox">
-            <div class="carousel-item active">
+            <div class="carousel-item active" style="background-image:url(pexels-asad-photo-maldives-169192.jpg)">
                 <div class="d-flex align-items-center justify-content-center min-vh-100">
                     <h1 class="display-1">ONE</h1>
                 </div>
             </div>
-            <div class="carousel-item">
+            <div class="carousel-item" style="background-image:url(pexels-asad-photo-maldives-169196.jpg)">
                 <div class="d-flex align-items-center justify-content-center min-vh-100">
                     <h1 class="display-1">TWO</h1>
                 </div>
             </div>
-            <div class="carousel-item">
+            <div class="carousel-item" style="background-image:url(pexels-viresh-studio-1444442.jpg)">
                 <div class="d-flex align-items-center justify-content-center min-vh-100">
                     <h1 class="display-1">THREE</h1>
                 </div>
