--- a/Index.html
+++ b/Index.html
@@ -29,7 +29,7 @@
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <!--<ul class="navbar-nav mr-auto">
+    <ul class="navbar-nav mr-auto">
       <li class="nav-item">
         <a class="nav-link" href="#carouselExampleControls">Home</a>
       </li>
@@ -46,7 +46,7 @@
         <a class="nav-link" href="#" data-toggle="modal" data-target="#exampleModal">Charges</a>
       </li>
       
-    </ul>-->
+    </ul>
     
     <form class="form-inline my-2 my-lg-0">
       <ul class="navbar-nav mr-auto">
