--- a/Index.html
+++ b/Index.html
@@ -30,7 +30,7 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
+      <!--<li class="nav-item">
         <a class="nav-link" href="#carouselExampleControls">Home</a>
       </li>
       <li class="nav-item">
@@ -44,7 +44,7 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#" data-toggle="modal" data-target="#exampleModal">Charges</a>
-      </li>
+      </li>-->
       
     </ul>
     
