--- a/Index.html
+++ b/Index.html
@@ -18,6 +18,13 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
+.display-1 {
+    font-size: 6rem;
+    font-weight: bold;
+    line-height: 1.2;
+    color: white;
+    text-shadow: 5px 5px darkslategrey;
+}
 </style>
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
