--- a/Index.html
+++ b/Index.html
@@ -113,10 +113,10 @@
   <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
   <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
 </div>
-<div id="section2" class="bg-success min-vh-100 bg-warning container-fluid" style="padding-top:70px;padding-bottom:70px">
-  <h1>Section 2</h1>
-  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+<div id="section2" class="bg-success min-vh-100 bg-warning container-fluid">
+  <div class="d-flex align-items-center justify-content-center min-vh-100">
+      <h1 class="display-1">Portfolio</h1>
+  </div>
 </div>
 <div id="section3" class="bg-success min-vh-100 bg-secondary container-fluid" style="padding-top:70px;padding-bottom:70px">
   <h1>Section 3</h1>
