--- a/Index.html
+++ b/Index.html
@@ -119,9 +119,18 @@
   </div>
 </div>
 <div id="section3" class="bg-success min-vh-100 bg-secondary container-fluid" style="padding-top:70px;padding-bottom:70px">
-  <h1>Section 3</h1>
-  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+  <h1 class='text-center'>Gallry</h1>
+  <div class="row">
+    <div class="col-sm-4">
+      <img src="pexels-viresh-studio-1444442.jpg" class="img-fluid" alt="Responsive image">
+    </div>
+    <div class="col-sm-4">
+      <img src="pexels-viresh-studio-1444442.jpg" class="img-fluid" alt="Responsive image">
+    </div>
+    <div class="col-sm-4">
+      <img src="pexels-viresh-studio-1444442.jpg" class="img-fluid" alt="Responsive image">
+    </div>
+  </div>
 </div>
 
   
