--- a/Index.html
+++ b/Index.html
@@ -118,17 +118,17 @@
       <h1 class="display-1">Portfolio</h1>
   </div>
 </div>
-<div id="section3" class="bg-success min-vh-100 bg-secondary container-fluid" style="padding-top:70px;padding-bottom:70px">
-  <h1 class='text-center'>Gallry</h1>
+<div id="section3" class="bg-success min-vh-100 bg-secondary container-fluid" style="padding-top:70px;padding-bottom:70px;background:black !important;">
+  <h1 class='text-center'>Gallary</h1>
   <div class="row">
     <div class="col-sm-4">
-      <img src="pexels-viresh-studio-1444442.jpg" class="img-fluid" alt="Responsive image">
+      <img src="pexels-viresh-studio-1444442.jpg" class="img-fluid img-thumbnail" alt="Responsive image">
     </div>
     <div class="col-sm-4">
-      <img src="pexels-viresh-studio-1444442.jpg" class="img-fluid" alt="Responsive image">
+      <img src="pexels-viresh-studio-1444442.jpg" class="img-fluid img-thumbnail" alt="Responsive image">
     </div>
     <div class="col-sm-4">
-      <img src="pexels-viresh-studio-1444442.jpg" class="img-fluid" alt="Responsive image">
+      <img src="pexels-viresh-studio-1444442.jpg" class="img-fluid img-thumbnail" alt="Responsive image">
     </div>
   </div>
 </div>
