--- a/Index.html
+++ b/Index.html
@@ -119,6 +119,7 @@
   </div>
 </div>
 <div id="section3" class="bg-success min-vh-100 bg-secondary container-fluid" style="padding-top:70px;padding-bottom:70px;background:black !important;">
+  <div class="container">
   <h1 class='text-center display-1'>Gallery</h1>
   <div class="row">
     <div class="col-sm-4">
@@ -130,6 +131,7 @@
     <div class="col-sm-4">
       <img src="pexels-viresh-studio-1444442.jpg" class="img-fluid img-thumbnail" alt="Responsive image">
     </div>
+  </div>
   </div>
 </div>
 
