--- a/Index.html
+++ b/Index.html
@@ -29,7 +29,7 @@
   
   
   
-  html, body {
+  /*html, body {
       margin: 0;
       padding: 0;
       width: 100%;
@@ -144,7 +144,7 @@ nav ul li a {
             display: block;
       }
 
-}
+}*/
 
 </style>
 <script>
@@ -170,7 +170,7 @@ nav ul li a {
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
 
     
-  <nav>
+  <!--<nav>
                <div class="menu-icon">
                   <i class="fa fa-bars fa-2x"></i>
                </div>
@@ -187,7 +187,7 @@ nav ul li a {
                      <li><a href="#">Contact</a></li>
                   </ul>
                </div>
-            </nav>
+            </nav>-->
   
     
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
