--- a/Index.html
+++ b/Index.html
@@ -29,7 +29,7 @@
   
   
   
-  /*html, body {
+  html, body {
       margin: 0;
       padding: 0;
       width: 100%;
@@ -144,7 +144,7 @@ nav ul li a {
             display: block;
       }
 
-}*/
+}
 
 </style>
 <script>
