--- a/Index.html
+++ b/Index.html
@@ -158,11 +158,11 @@ nav ul li a {
 
   $(window).on("scroll", function() {
       if($(window).scrollTop()) {
-            $('nav').addClass('black');
+            $('nav').addClass('bg-dark');
       }
 
       else {
-            $('nav').removeClass('black');
+            $('nav').removeClass('bg-dark');
       }
   })
  </script>
@@ -190,7 +190,7 @@ nav ul li a {
             </nav>-->
   
     
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+<nav class="navbar navbar-expand-sm navbar-dark fixed-top">
   <a class="navbar-brand" href="#">LOGO</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
