--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ nav ul li a {
 
   $(window).on("scroll", function() {
       if($(window).scrollTop()) {
-            $('nav').addClass('bg-dark');
+            $('nav').addClass('bg-dark').fadeIn(3000);
       }
 
       else {
