--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   
 
 
-nav ul {
+/*nav ul {
       line-height: 60px;
       list-style: none;
       background: rgba(0, 0, 0, 0);
@@ -57,7 +57,7 @@ nav ul {
       nav.black ul {
             background: #000;
       }
-}
+}*/
 
 </style>
 <script>
