--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
     text-shadow: 5px 5px darkslategrey;
 }
   
-  
+.carousel-image{
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
   
   
 
@@ -155,17 +158,17 @@
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner bg-info" role="listbox">
             
-            <div class="carousel-item active" style="background-image:url(pexels-asad-photo-maldives-169196.jpg)">
+            <div class="carousel-item active carousel-image" style="background-image:url(pexels-asad-photo-maldives-169196.jpg)">
                 <div class="d-flex align-items-center justify-content-center min-vh-100">
                     <h1 class="display-1">ONE</h1>
                 </div>
             </div>
-          <div class="carousel-item " style="background-image:url(pexels-asad-photo-maldives-169192.jpg)">
+          <div class="carousel-item carousel-image" style="background-image:url(pexels-asad-photo-maldives-169192.jpg)">
                 <div class="d-flex align-items-center justify-content-center min-vh-100">
                     <h1 class="display-1">TWO</h1>
                 </div>
             </div>
-            <div class="carousel-item" style="background-image:url(pexels-viresh-studio-1444442.jpg)">
+            <div class="carousel-item carousel-image" style="background-image:url(pexels-viresh-studio-1444442.jpg)">
                 <div class="d-flex align-items-center justify-content-center min-vh-100">
                     <h1 class="display-1">THREE</h1>
                 </div>
