--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>Mahakal Art Studio</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -26,7 +26,7 @@
     text-shadow: 5px 5px darkslategrey;
 }
   
-.carousel-image{
+.carousel-image,#section2{
   background-repeat: no-repeat;
   background-size: 100%;
 }
@@ -34,33 +34,11 @@
   
 
 
-/*nav ul {
-      line-height: 60px;
-      list-style: none;
-      background: rgba(0, 0, 0, 0);
-      overflow: hidden;
-      color: #fff;
-      padding: 0;
-      text-align: right;
-      margin: 0;
-      padding-right: 40px;
-      transition: 1s;
-}
-
-
-
-
-
 @media(max-width: 786px) {
-      nav ul {
-            max-height: 0px;
-            background: #000;
+      .showing {
+            max-height: 34em;
       }
-
-      nav.black ul {
-            background: #000;
-      }
-}*/
+}
 
 </style>
 <script>
