--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
     text-shadow: 5px 5px darkslategrey;
 }
   
-.carousel-image,#section2{
+.carousel-image{
   background-repeat: no-repeat;
-  background-size: 100%;
+  background-position: center;
+  background-size: cover;
 }
   
   
