--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <style> 
 #section2 {
-  background-image: url("pexels-rovenimagescom-949586.jpg");
+  background: url("pexels-rovenimagescom-949586.jpg") no-repeat 50% 50%;
   /*min-height: 500px;*/
   background-attachment: fixed;
   background-position: center;
