--- a/index.html
+++ b/index.html
@@ -82,19 +82,19 @@ html,body {
 /* first section */
 
 .bg-1 {
-  background-image: url('https://www.dl.dropboxusercontent.com/s/dk3s266jb5klmba/bg1.jpg');
+  background-image: url('pexels-asad-photo-maldives-169196.jpg');
 }
 
 /* third section */
 
 .bg-2 {
-  background-image: url('https://www.dl.dropboxusercontent.com/s/jcord1lxh30e02z/bg2.jpg');
+  background-image: url('pexels-asad-photo-maldives-169196.jpg');
 }
 
 /* fifth section */
 
 .bg-3 {
-  background-image: url('https://www.dl.dropboxusercontent.com/s/rsk15kp7azmsi27/bg3.jpg');
+  background-image: url('pexels-asad-photo-maldives-169196.jpg');
 }
   
 </style>
