--- a/index.html
+++ b/index.html
@@ -226,11 +226,22 @@ html,body {
   <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
   <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
 </div>
-<div id="section2" class="bg-success min-vh-100 bg-warning container-fluid">
+<div  class="bg-success min-vh-100 bg-warning container-fluid">
   <div class="d-flex align-items-center justify-content-center min-vh-100">
       <h1 class="display-1">Portfolio</h1>
   </div>
 </div>
+  
+  
+<div class="wrapper"> <!-- wrapper div starts -->
+  
+  <div class="fixed-bg bg-1" id="section2">
+      <h1 class="display-1">Portfolio</h1>
+  </div>
+  
+  
+</div> <!-- wrapper div ends-->
+  
 <div id="section3" class="bg-success min-vh-100 bg-secondary container-fluid" style="padding-top:70px;padding-bottom:70px;background:black !important;">
   <div class="container">
   <h1 class='text-center display-1'>Gallery</h1>
@@ -249,29 +260,7 @@ html,body {
 </div>
 
   
-  <div class="wrapper"> <!-- wrapper div starts -->
   
-  <div class="fixed-bg bg-1">
-    <h1>Fixed Background scrolling</h1>
-  </div>
-  
-  <div class="scroll-bg">
-    <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec in dolor tempor, posuere mi id, eleifend magna. Nulla at lectus magna. Etiam sodales arcu at lectus porttitor accumsan. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Curabitur id urna dolor. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Proin et pharetra justo, quis suscipit risus. Maecenas tincidunt efficitur ex in pharetra.</h3>
-  </div>
-  
-  <div class="fixed-bg bg-2">
-    <h1>Fixed Background scrolling</h1>
-  </div>
-  
-  <div class="scroll-bg">
-    <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec in dolor tempor, posuere mi id, eleifend magna. Nulla at lectus magna.</h3>
-  </div>
-  
-  <div class="fixed-bg bg-3">
-    <h1>Fixed Background scrolling</h1>
-  </div>
-  
-</div> <!-- wrapper div ends-->
   
   
   <!-- Modal -->
