--- a/index.html
+++ b/index.html
@@ -265,6 +265,7 @@ html,body {
       </div>
       <div class="modal-body">
         <h3 class="text-center">Album Paper</h3>
+        <div class="table-responsive">
         <table class="table table-bordered table-sm">
           <thead>
             <tr>
@@ -293,8 +294,9 @@ html,body {
             </tr>
           </tbody>
         </table>
-        
+        </div>
         <h3 class="text-center">Photography & Videography</h3>
+        <table class="table table-bordered table-sm">
         <table class="table table-bordered table-sm">
           <thead>
             <tr>
@@ -317,6 +319,7 @@ html,body {
             </tr>
           </tbody>
         </table>
+        </div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
