--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ html,body {
         </table>
         </div>
         <h3 class="text-center">Photography & Videography</h3>
-        <table class="table table-bordered table-sm">
+        <div class="table-responsive">
         <table class="table table-bordered table-sm">
           <thead>
             <tr>
