--- a/index.html
+++ b/index.html
@@ -239,8 +239,33 @@ html,body {
   </div>
 </div>
 
+  <div id="section3" class="bg-success min-vh-100 bg-secondary container-fluid" style="padding-top:70px;padding-bottom:70px;background:black !important;">
+  <div class="">
+  <h1 class='text-center display-1'>Youtube</h1>
+  <div class="row">
+    <div class="col-sm-4">
+      <!-- 21:9 aspect ratio -->
+      <div class="embed-responsive embed-responsive-21by9">
+        <iframe class="embed-responsive-item" src="https://www.youtube.com/watch?v=lqlTAN-byA0"></iframe>
+      </div>
+    </div>
+    <div class="col-sm-4">
+      <!-- 16:9 aspect ratio -->
+      <div class="embed-responsive embed-responsive-16by9">
+        <iframe class="embed-responsive-item" src="https://www.youtube.com/watch?v=lqlTAN-byA0"></iframe>
+      </div>
+    </div>
+    <div class="col-sm-4">
+      <!-- 4:3 aspect ratio -->
+      <div class="embed-responsive embed-responsive-4by3">
+        <iframe class="embed-responsive-item" src="https://www.youtube.com/watch?v=lqlTAN-byA0"></iframe>
+      </div>
+    </div>
+  </div>
+  </div>
+</div>
   
-  <div class="wrapper"> <!-- wrapper div starts -->
+  <!--<div class="wrapper"> 
   
   <div class="fixed-bg bg-1">
     <h1>Fixed Background scrolling</h1>
@@ -250,7 +275,7 @@ html,body {
     <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec in dolor tempor, posuere mi id, eleifend magna. Nulla at lectus magna. Etiam sodales arcu at lectus porttitor accumsan. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Curabitur id urna dolor. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Proin et pharetra justo, quis suscipit risus. Maecenas tincidunt efficitur ex in pharetra.</h3>
   </div>
     
-</div> <!-- wrapper div ends-->
+</div> -->
   
   
   <!-- Modal -->
