--- a/index.html
+++ b/index.html
@@ -244,21 +244,21 @@ html,body {
   <h1 class='text-center display-1'>Youtube</h1>
   <div class="row">
     <div class="col-sm-4">
-      <!-- 21:9 aspect ratio -->
-      <div class="embed-responsive embed-responsive-21by9">
-        <iframe class="embed-responsive-item" src="https://www.youtube.com/watch?v=lqlTAN-byA0"></iframe>
+      <!-- 16:9 aspect ratio -->
+      <div class="embed-responsive embed-responsive-16by9">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/lqlTAN-byA0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </div>
     <div class="col-sm-4">
       <!-- 16:9 aspect ratio -->
       <div class="embed-responsive embed-responsive-16by9">
-        <iframe class="embed-responsive-item" src="https://www.youtube.com/watch?v=lqlTAN-byA0"></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/lqlTAN-byA0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </div>
     <div class="col-sm-4">
-      <!-- 4:3 aspect ratio -->
-      <div class="embed-responsive embed-responsive-4by3">
-        <iframe class="embed-responsive-item" src="https://www.youtube.com/watch?v=lqlTAN-byA0"></iframe>
+      <!-- 16:9 aspect ratio -->
+      <div class="embed-responsive embed-responsive-16by9">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/lqlTAN-byA0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </div>
   </div>
