--- a/index.html
+++ b/index.html
@@ -167,7 +167,10 @@ html,body {
           <a class="nav-link" href="#section2">Section 2</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#section3">Section 3</a>
+          <a class="nav-link" href="#section3">Gallery</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#section3">Youtube</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#" data-toggle="modal" data-target="#exampleModal">Charges</a>
@@ -239,7 +242,7 @@ html,body {
   </div>
 </div>
 
-  <div id="section3" class="bg-success min-vh-100 bg-secondary container-fluid" style="padding-top:70px;padding-bottom:70px;background:black !important;">
+  <div id="section4" class="bg-success min-vh-100 bg-secondary container-fluid" style="padding-top:70px;padding-bottom:70px;background:#2b2b31 !important;">
   <div class="">
   <h1 class='text-center display-1'>Youtube</h1>
   <div class="row">
