--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ html,body {
           <a class="nav-link" href="#section1">Section 1</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#section2">Section 2</a>
+          <a class="nav-link" href="#section2">Portfolio</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#section3">Gallery</a>
@@ -229,13 +229,13 @@ html,body {
   <div class="container">
   <h1 class='text-center display-1'>Gallery</h1>
   <div class="row">
-    <div class="col-sm-4">
+    <div class="col-sm-4 form-group">
       <img src="pexels-viresh-studio-1444442.jpg" class="img-fluid img-thumbnail" alt="Responsive image">
     </div>
-    <div class="col-sm-4">
+    <div class="col-sm-4 form-group">
       <img src="pexels-viresh-studio-1444442.jpg" class="img-fluid img-thumbnail" alt="Responsive image">
     </div>
-    <div class="col-sm-4">
+    <div class="col-sm-4 form-group">
       <img src="pexels-viresh-studio-1444442.jpg" class="img-fluid img-thumbnail" alt="Responsive image">
     </div>
   </div>
@@ -246,19 +246,19 @@ html,body {
   <div class="">
   <h1 class='text-center display-1'>Youtube</h1>
   <div class="row">
-    <div class="col-sm-4">
+    <div class="col-sm-4 form-group">
       <!-- 16:9 aspect ratio -->
       <div class="embed-responsive embed-responsive-16by9">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/lqlTAN-byA0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </div>
-    <div class="col-sm-4">
+    <div class="col-sm-4 form-group">
       <!-- 16:9 aspect ratio -->
       <div class="embed-responsive embed-responsive-16by9">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/lqlTAN-byA0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </div>
-    <div class="col-sm-4">
+    <div class="col-sm-4 form-group">
       <!-- 16:9 aspect ratio -->
       <div class="embed-responsive embed-responsive-16by9">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/lqlTAN-byA0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
