--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ html,body {
                </div>
             </nav>-->
   
-    
+    file update
 <nav class="navbar navbar-expand-sm navbar-dark fixed-top">
   <a class="navbar-brand" href="#">LOGO</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -179,7 +179,7 @@ html,body {
     </form>
   </div>
 </nav>
-  
+  file update
 <div class="container-fluid px-0">
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner bg-info" role="listbox">
